bắt đầu cấu hình cho môi trường server